# gheasy

./: .gitignore  CHANGELOG.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml  workflow.html  workflow.html.md
gheasy/: SKILL.md  __init__.py  _modidx.py  core.py  workflow.py
nbs/: 00_core.ipynb  01_workflow.ipynb  index.ipynb  nbdev.yml
